--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,12 @@ Unipath==1.0
 argparse==1.2.1
 dj-database-url==0.3.0
 dj-static==0.0.5
+django-bootstrap-form==0.2
 django-tinymce==1.5.2
 gunicorn==18.0
 psycopg2==2.5.3
 pystache==0.5.4
 python-decouple==2.2
-pytz
+pytz==2014.4
 static==1.0.2
 wsgiref==0.1.2
