--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ argparse==1.2.1
 dj-database-url==0.3.0
 dj-static==0.0.5
 django-bootstrap-form==0.2
+django-grappelli==2.6.1
 django-tinymce==1.5.2
 gunicorn==18.0
 psycopg2==2.5.3
